testsuite/poke.pkl/apop-diag-1.pk
/* { dg-do compile } */

var a =
  apop (Exception {} /* { dg-error "invalid operand.*\n.*expected array" } */
  );
